# slam-primitives

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CONTEXT.md  LICENSE  README.md  build_lib.sh  build_ros2.sh  configure_devcontainer.sh  cpp_cuda_template_project.code-workspace  generate_version.sh  run_in_container.sh
.devcontainer/: Dockerfile  cuda-setup.sh  custom-setup.sh  devcontainer.json  ros-setup.sh  update_devcontainer_json.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build_linux.yml  build_linux.yml.templ0  build_linux.yml.templ1  build_linux_cuda.yml  build_linux_cuda.yml.templ0  build_linux_cuda.yml.templ1  build_ros2_overlay.yml  docs.yml
cmake/: CMakeLists.txt  FindNumPy.cmake  HandleCUDA.cmake  HandleCatch2.cmake  HandleCompilerFlags.cmake  HandleCustomTargets.cmake  HandleDoxygenDocs.cmake  HandleGitVersion.cmake  HandleOpenCL.cmake  HandleOpenGL.cmake  HandleOpenMP.cmake  HandleOptiX.cmake  HandleProfiling.cmake  HandlePython.cmake  HandleSanitizers.cmake  HandleSpdlog.cmake  HandleSubmodules.cmake  HandleTBB.cmake  HandleWrapper.cmake  cmake_colored_messages.cmake  cmake_cuda_ptx_tools.cmake  cmake_utils.cmake
cmake/toolchains/: HandleToolchain.cmake
cmake/toolchains/defaults/: aarch64-clang.cmake  aarch64-linux-gnu.cmake  arm-clang.cmake  arm-linux-gnueabihf.cmake  clang-cross.cmake  common-cross.cmake  gcc-cross.cmake  riscv64-linux-gnu.cmake  x86_64-w64-mingw32.cmake
doc/: CMakeLists.txt  Doxyfile.in  build_script_doc.md  logging.md  main_page.md  ros2_overlay.md
doc/developments/: 2026-07-15_implementation_review.md  active_feature_cleanup_performance_plan.md
examples/: CMakeLists.txt  COLCON_IGNORE
examples/template_consumer_project/: CMakeLists.txt  README.md  example_project.cpp  example_project.h
examples/template_examples/: CMakeLists.txt  example_build.cpp
lib/: COLCON_IGNORE
profiling/: .gitignore  common_parser.sh  open_kcachegrind.sh  open_nvidia_profile.sh  run_call_profiling.sh  run_gperf_profiling.sh  run_gpu_profiling.sh  run_mem_complexity.sh  run_ops_profiling.sh
python/: .gitignore  COLCON_IGNORE  pyproject.toml.in  setup.py.in
python/slam_primitives/: __init__.py
python/template_project/: __init__.py
ros2/slam_primitives/: CMakeLists.txt  package.xml
ros2/slam_primitives_interfaces/: CMakeLists.txt  package.xml
ros2/slam_primitives_interfaces/msg/: FeatureObservation2D.msg  FeatureTrack2D.msg  FeatureTrackArray.msg
ros2/tools/: sync_package_metadata.py
src/: CMakeLists.txt  config.h.in  global_includes.h  wrap_interface.i
src/cmake/: template_projectConfig.cmake.in
src/slam_primitives/: CMakeLists.txt
src/slam_primitives/bundle/: CFeatureSetBundle.h
src/slam_primitives/containers/: CCircularBuffer.h  CMakeLists.txt
src/slam_primitives/covisibility/: CCovisibilityGraph.h  CMakeLists.txt
src/slam_primitives/feature_sets/: CFeatureSet.h  CFeatureTrack.h  SFeatureTrackSnapshot.h
src/slam_primitives/logging/: CLogger.h  CMakeLists.txt
src/slam_primitives/types/: ESetType.h  SFeatureLocation2D.h  concepts.h  labeling_policies.h  type_aliases.h
src/slam_primitives/wrapped/: CMakeLists.txt  README.md  slam_primitives.i  slam_primitives_wrapper_interfaces.h
src/template_src/: CMakeLists.txt  placeholder.cpp  placeholder.h
src/template_src_kernels/: placeholder.cu  placeholder.cuh  placeholder_to_ptx.ptx.cu
src/utils/wrap_adapters/: GtsamAliases.h
src/wrapped_impl/: CMakeLists.txt  CWrapperPlaceholder.cpp  CWrapperPlaceholder.h  wrapper_placeholder.i
tests/: CMakeLists.txt  COLCON_IGNORE  test_ros2_metadata.py
tests/template_fixtures/: CMakeLists.txt  test_fixtures.h
tests/template_test/: testTemplate.cpp
tests/test_bundle/: CMakeLists.txt  test_CFeatureSetBundle.cpp
tests/test_containers/: test_CCircularBuffer.cpp
tests/test_covisibility/: test_CCovisibilityGraph.cpp
tests/test_feature_sets/: test_CFeatureSet.cpp  test_CFeatureTrack.cpp  test_SFeatureTrackSnapshot.cpp
tests/test_fixtures/: test_fixtures.h
tests/test_logging/: CLoggerOtherTranslationUnit.cpp  CLoggerOtherTranslationUnit.h  CMakeLists.txt  test_CLogger.cpp
tests/test_types/: CMakeLists.txt  test_concepts_and_policies.cpp
tests/test_wrapped/: test_slam_primitives_wrapper_interfaces.cpp
